[package]
name = "mitosis"
version = "0.1.0"
authors = ["Ash B <ash.b.7558@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
tokio = { version = "1", features = ["full"] }

# http server
warp = "0.3"

# error handling
thiserror = "1"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# extraction
zip = "0.5"
regex = "1"
walkdir = "2"

# config
toml = "0.5"

# logging
log = "0.4"
pretty_env_logger = "0.4"
